@@ -135,7 +135,9 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
         this.root = root;
         bootPath = ClassPath.getClassPath(root, ClassPath.BOOT);
         compilePath = ClassPath.getClassPath(root, ClassPath.COMPILE);
-        compilePath.addPropertyChangeListener(this);
+        if (compilePath != null) {
+            compilePath.addPropertyChangeListener(this);
+        }
         processorPath = new AtomicReference<>(ClassPath.getClassPath(root, JavaClassPathConstants.PROCESSOR_PATH));
         processorModulePath = new AtomicReference<>(ClassPath.getClassPath(root, JavaClassPathConstants.MODULE_PROCESSOR_PATH));
         aptOptions = AnnotationProcessingQuery.getAnnotationProcessingOptions(root);
@@ -360,7 +362,9 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
                     compilePath.removePropertyChangeListener(this);
                 }
                 compilePath = ClassPath.getClassPath(root, ClassPath.COMPILE);
-                compilePath.addPropertyChangeListener(this);
+                if (compilePath != null) {
+                    compilePath.addPropertyChangeListener(this);
+                }
                 listenOnProcessorPath(pp, this);
                 classLoaderCache = null;
             }
@@ -377,7 +381,7 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
         for (String name : processorNames) {
             try {
                 Class<?> clazz = Class.forName(name, true, cl);
-                Object instance = clazz.newInstance();
+                Object instance = clazz.getDeclaredConstructor().newInstance();
                 if (instance instanceof Processor) {
                     result.add(new ErrorToleratingProcessor((Processor) instance));
                 }
@@ -954,7 +958,8 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
 
         private final Processor delegate;
         private ProcessingEnvironment processingEnv;
-        private boolean valid = true;
+        private boolean initFailed = false;
+        private boolean processFailed = false;
 
         public ErrorToleratingProcessor(Processor delegate) {
             this.delegate = delegate;
@@ -962,7 +967,7 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
 
         @Override
         public Set<String> getSupportedOptions() {
-            if (!valid) {
+            if (initFailed) {
                 return Collections.emptySet();
             }
             return delegate.getSupportedOptions();
@@ -970,7 +975,7 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
 
         @Override
         public Set<String> getSupportedAnnotationTypes() {
-            if (!valid) {
+            if (initFailed) {
                 return Collections.emptySet();
             }
             return delegate.getSupportedAnnotationTypes();
@@ -978,7 +983,7 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
 
         @Override
         public SourceVersion getSupportedSourceVersion() {
-            if (!valid) {
+            if (initFailed) {
                 return SourceVersion.latest();
             }
             return delegate.getSupportedSourceVersion();
@@ -989,10 +994,10 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
             try {
                 delegate.init(processingEnv);
             } catch (ClientCodeException | ThreadDeath | Abort err) {
-                valid = false;
+                initFailed = true;
                 throw err;
             } catch (Throwable t) {
-                valid = false;
+                initFailed = true;
                 StringBuilder exception = new StringBuilder();
                 exception.append(t.getMessage()).append("\n");
                 for (StackTraceElement ste : t.getStackTrace()) {
@@ -1006,16 +1011,16 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
         @Override
         @Messages("ERR_ProcessorException=Annotation processor {0} failed with an exception: {1}")
         public boolean process(Set<? extends TypeElement> annotations, RoundEnvironment roundEnv) {
-            if (!valid) {
+            if (initFailed || processFailed) {
                 return false;
             }
             try {
                 return delegate.process(annotations, roundEnv);
             } catch (ClientCodeException | ThreadDeath | Abort err) {
-                valid = false;
+                processFailed = true;
                 throw err;
             } catch (Throwable t) {
-                valid = false;
+                processFailed = true;
                 Element el = roundEnv.getRootElements().isEmpty() ? null : roundEnv.getRootElements().iterator().next();
                 StringBuilder exception = new StringBuilder();
                 exception.append(t.getMessage()).append("\n");
@@ -1029,12 +1034,11 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
 
         @Override
         public Iterable<? extends Completion> getCompletions(Element element, AnnotationMirror annotation, ExecutableElement member, String userText) {
-            if (!valid) {
+            if (initFailed) {
                 return Collections.emptySet();
             }
             return delegate.getCompletions(element, annotation, member, userText);
         }
 
     }
-
 }
